<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pig</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnRoll">Roll</string>
    <string name="btnHold">Hold</string>
    <string name="txtPlayerOne">Player 1:</string>
    <string name="txtPlayerTwo">Player 2:</string>
    <string name="txtReady">Player 1\'s Turn</string>
    <string name="menuReset">Reset</string>

</resources>
